# src/routes/user/swagger.yml
@@ -46,6 +46,20 @@ definitions:
         type: string
         description: 비밀번호
 
+  ChangePassword:
+    type: object
+    required:
+      - originPassword
+      - changePassword
+    properties:
+      originPassword:
+        type: string
+        description: 기존 비밀번호
+      changePassword:
+        type: string
+        description: 변경할 비밀번호
+
+
 /user/signup:
   post:
     tags: [User]
@@ -241,3 +255,64 @@ definitions:
                 status: 500
                 message: Internal Server Error
                 code: COMMON005
+
+/user/changepassword:
+  post:
+    tags: [User]
+    produces:
+      - application/json
+    consumes:
+      - application/json
+    security:
+      - bearerAuth: []
+    parameters:
+      - in: header
+        name: authorization
+        description: 로그인 토큰
+        required: true
+        schema:
+          type: string
+    requestBody:
+      content:
+        application/json:
+          name: ChangePassword
+          required: true
+          schema: 
+            $ref: '#/definitions/ChangePassword'
+    
+    responses:
+      200:
+        description: '비밀번호 변경'
+         content:
+           application/json:
+            example:
+              status: 200
+              message: '정상적으로 비밀번호가 변경되었습니다.'
+      400:
+        description: '잘못된 데이터를 입력한 경우'
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 400
+                message: '비밀번호는 6자 이상 15자 이하의 영문+숫자이어야 합니다. | 기존의 비밀번호를 입력해주세요 | 기존의 비밀번호는 사용하실 수 없습니다.'
+                code: 'SIGNUP003 | PASSWORD001 | PASSWORD002'
+      401:
+        description: '잘못된 데이터를 입력한 경우'
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 401
+                message: '로그인 후 이용해 주세요'
+                code: 'COMMON008'
+      500:
+        description: "알 수 없는 오류"
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 500
+                message: Internal Server Error
+                code: COMMON005
+                
